log/build_2025-11-08_20-21-15/command_nodes/stderr.log
  File "/root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/command_handler.py", line 11
    }
    ^
SyntaxError: invalid syntax

